# substrATE

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  curation_README.md  environment.yml  environment_pinned.yml  pyproject.toml  tutorial.md
curation/: reference_strains.txt
curation/activity_patterns/: agar_pattern_review.tsv  alginate_pattern_review.tsv  arabinogalactan_pattern_review.tsv  arabinoxylan_pattern_review.tsv  beta_mannan_pattern_review.tsv  carrageenan_pattern_review.tsv  cellulose_pattern_review.tsv  chitin_pattern_review.tsv  chondroitin_sulfate_pattern_review.tsv  glycogen_pattern_review.tsv  heparan_sulfate_pattern_review.tsv  hyaluronic_acid_pattern_review.tsv  inulin_pattern_review.tsv  laminarin_pattern_review.tsv  levan_pattern_review.tsv  lichenan_pattern_review.tsv  pectin_pattern_review.tsv  porphyran_pattern_review.tsv  pullulan_pattern_review.tsv  starch_pattern_review.tsv  sucrose_pattern_review.tsv  ulvan_pattern_review.tsv  xylan_pattern_review.tsv  xyloglucan_pattern_review.tsv
scripts/: build_reference_db.py  build_reference_trees.py  generate_patterns.py
substrate/: activity.py  align.py  classify_pul.py  cli.py  clinker.py  count.py  extract_seqs.py  genbank.py  itol.py  parse_substrates.py  place_sequences.py  run_dbcan.py  tree.py  trim.py
substrate/data/: activity_patterns.tsv  default_colours.tsv
tests/: test_activity.py  test_classify_pul.py  test_extract_seqs.py
tests/data/genomes/: Christiangramia_forsetii_KT0803.fna
